--- a/docs/Homebrew/.obsidian/workspace
+++ b/docs/Homebrew/.obsidian/workspace
@@ -4,28 +4,15 @@
     "type": "split",
     "children": [
       {
-        "id": "eb94e7858cb96c0b",
+        "id": "2feb881385335ea8",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "9-Spells/Carreau's Cantrips.md",
+            "file": "Rogue.md",
             "mode": "source"
           }
-        },
-        "group": "d7a406edd4c53ca7"
-      },
-      {
-        "id": "181f575ecf0cdde1",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "9-Spells/Carreau's Cantrips.md",
-            "mode": "preview"
-          }
-        },
-        "group": "d7a406edd4c53ca7"
+        }
       }
     ],
     "direction": "vertical"
@@ -89,7 +76,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "9-Spells/Carreau's Cantrips.md",
+                "file": "Rogue.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -117,7 +104,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "9-Spells/Carreau's Cantrips.md"
+                "file": "Rogue.md"
               }
             }
           },
@@ -127,30 +114,38 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "9-Spells/Carreau's Cantrips.md",
+                "file": "Rogue.md",
                 "linksCollapsed": true,
                 "unlinkedCollapsed": true
               }
             }
+          },
+          {
+            "id": "3c87cc5409a5513c",
+            "type": "leaf",
+            "state": {
+              "type": "advanced-tables-toolbar",
+              "state": {}
+            }
           }
         ],
-        "currentTab": 1
+        "currentTab": 4
       }
     ],
     "direction": "horizontal",
     "width": 300
   },
-  "active": "eb94e7858cb96c0b",
+  "active": "2feb881385335ea8",
   "lastOpenFiles": [
-    "9-Spells/Carreau's Cantrips.md",
-    "9-Spells/Cantrips/Spare the Dying.md",
-    "9-Spells/Cantrips/Thaumaturgy.md",
-    "9-Spells/Cantrips/Venomous Sting.md",
-    "9-Spells/Cantrips/Sedative Sting.md",
-    "9-Spells/Cantrips/Protection.md",
-    "9-Spells/Cantrips/Mending.md",
-    "9-Spells/Cantrips/Marking Strike.md",
-    "9-Spells/Cantrips/Light.md",
-    "9-Spells/Cantrips/Holy Fire.md"
+    "Rogue.md",
+    "3-Classes/3-Cleric/Cleric.md",
+    "Untitled.md",
+    "OGL.md",
+    "To Do.md",
+    "3-Classes/3-Cleric/Cleric-Subclasses/Cleric-Life.md",
+    "3-Classes/3-Cleric/Cleric-Subclasses/Cleric-Nature.md",
+    "3-Classes/3-Cleric/Divine Doctrines.md",
+    "3-Classes/3-Cleric/Divine Doctrines/Rapid Response.md",
+    "9-Spells/Level 1/Bane.md"
   ]
 }
