--- a/docs/Homebrew/.obsidian/workspace
+++ b/docs/Homebrew/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "2-Backgrounds/1-Species/Dragonborn.md",
+            "file": "9-Spells/Cantrips/Mending.md",
             "mode": "source"
           }
         },
@@ -21,7 +21,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "2-Backgrounds/1-Species/Dragonborn.md",
+            "file": "9-Spells/Cantrips/Mending.md",
             "mode": "preview"
           }
         },
@@ -89,7 +89,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "2-Backgrounds/1-Species/Dragonborn.md",
+                "file": "9-Spells/Cantrips/Mending.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "2-Backgrounds/1-Species/Dragonborn.md"
+                "file": "9-Spells/Cantrips/Mending.md"
               }
             }
           },
@@ -127,7 +127,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "2-Backgrounds/1-Species/Dragonborn.md",
+                "file": "9-Spells/Cantrips/Mending.md",
                 "linksCollapsed": true,
                 "unlinkedCollapsed": false
               }
@@ -150,15 +150,15 @@
   },
   "active": "2feb881385335ea8",
   "lastOpenFiles": [
-    "2-Backgrounds/1-Species/Dragonborn.md",
-    "1-Core Rules/Ability Scores.md",
-    "1-Core Rules/9-Creating A Character.md",
-    "1-Core Rules/5-Ability Checks.md",
-    "1-Core Rules/1-Design Principles.md",
-    "0-Templates/Spell-FrontMatter.md",
-    "1-Core Rules/Ability Scores/6-Charisma.md",
-    "1-Core Rules/Ability Scores/5-Wisdom.md",
-    "1-Core Rules/Ability Scores/4-Intelligence.md",
-    "1-Core Rules/Ability Scores/3-Constitution.md"
+    "9-Spells/Cantrips/Mending.md",
+    "9-Spells/Cantrips/Marking Strike.md",
+    "9-Spells/Cantrips/Light.md",
+    "9-Spells/Cantrips/Holy Fire.md",
+    "9-Spells/Cantrips/Guiding Strike.md",
+    "9-Spells/Cantrips/Guidance.md",
+    "9-Spells/Cantrips/Frost Blade.md",
+    "9-Spells/Cantrips/Explosive Trap.md",
+    "9-Spells/Cantrips/Electrified Net.md",
+    "9-Spells/Cantrips/Dark Net.md"
   ]
 }
