--- a/docs/Homebrew/.obsidian/workspace
+++ b/docs/Homebrew/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "68c5081e18967e42",
+        "id": "ba70ab1ac576f565",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "3-Classes/Rogue.md",
+            "file": "Other/To Do.md",
             "mode": "source"
           }
         }
@@ -76,14 +76,14 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "3-Classes/Rogue.md",
+                "file": "Other/To Do.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
                 "showSearch": false,
                 "searchQuery": "",
                 "backlinkCollapsed": true,
-                "unlinkedCollapsed": false
+                "unlinkedCollapsed": true
               }
             }
           },
@@ -104,7 +104,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "3-Classes/Rogue.md"
+                "file": "Other/To Do.md"
               }
             }
           },
@@ -114,9 +114,9 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "3-Classes/Rogue.md",
+                "file": "Other/To Do.md",
                 "linksCollapsed": true,
-                "unlinkedCollapsed": false
+                "unlinkedCollapsed": true
               }
             }
           },
@@ -137,23 +137,24 @@
             }
           }
         ],
-        "currentTab": 3
+        "currentTab": 5
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
-  "active": "68c5081e18967e42",
+  "active": "ba70ab1ac576f565",
   "lastOpenFiles": [
-    "3-Classes/Rogue.md",
-    "1-Core Rules/Ability Scores.md",
-    "2-Backgrounds/1-Species/Half-Elf.md",
-    "2-Backgrounds/1-Species/Gnome.md",
-    "2-Backgrounds/1-Species/Elf.md",
-    "2-Backgrounds/1-Species/Dwarf.md",
+    "Other/To Do.md",
+    "1-Core Rules/9-Creating A Character.md",
     "2-Backgrounds/1-Species/Dragonborn.md",
-    "1-Core Rules/Ability Scores/1-Strength.md",
-    "2-Backgrounds/3-Experience/Soldier.md",
-    "2-Backgrounds/3-Experience/Slave.md"
+    "3-Classes/Rogue.md",
+    "7-Feats/Feats.md",
+    "1-Core Rules/Ability Scores/2-Dexterity.md",
+    "7-Feats/Feats/Actor.md",
+    "Untitled.md",
+    "7-Feats/Actor.md",
+    "War Caster.md"
   ]
 }
