--- a/docs/Homebrew/.obsidian/workspace
+++ b/docs/Homebrew/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "7-Equipment/Weapons/Weapons.md",
+            "file": "7-Equipment/Weapons/Untitled 1.md",
             "mode": "source"
           }
         }
@@ -60,8 +60,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
   "right": {
     "id": "04addc853385561d",
@@ -77,7 +76,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "7-Equipment/Weapons/Weapons.md",
+                "file": "7-Equipment/Weapons/Untitled 1.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -105,7 +104,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "7-Equipment/Weapons/Weapons.md"
+                "file": "7-Equipment/Weapons/Untitled 1.md"
               }
             }
           },
@@ -115,7 +114,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "7-Equipment/Weapons/Weapons.md",
+                "file": "7-Equipment/Weapons/Untitled 1.md",
                 "linksCollapsed": true,
                 "unlinkedCollapsed": true
               }
@@ -155,6 +154,7 @@
   },
   "active": "fb7d8f0efe6e153c",
   "lastOpenFiles": [
+    "7-Equipment/Weapons/Untitled 1.md",
     "7-Equipment/Weapons/Weapons.md",
     "7-Equipment/Weapons/Firecage Arrow.md",
     "7-Equipment/Weapons/Elemental Ammunition.md",
@@ -163,7 +163,6 @@
     "3-Classes/4-Sorcerer/Sorcerer.md",
     "Trash/5-Wisdom.md",
     "Trash/1-Strength.md",
-    "1-Core Rules/Ability Scores/4-Charisma.md",
-    "1-Core Rules/Ability Scores/3-Intelligence.md"
+    "1-Core Rules/Ability Scores/4-Charisma.md"
   ]
 }
