--- a/docs/Adventures/Adventures/.obsidian/workspace
+++ b/docs/Adventures/Adventures/.obsidian/workspace
@@ -7,11 +7,8 @@
         "id": "6630241c2d3c2ab9",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Tucker's Kobolds.md",
-            "mode": "source"
-          }
+          "type": "graph",
+          "state": {}
         }
       }
     ],
@@ -68,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Tucker's Kobolds.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
